# OptionsTrader

./: .gitignore  README.md
dreambot/: .env.example  README.md  docker-compose.yml  pyproject.toml
dreambot/backtests/: calibration.json  fill_quality.csv  summary.csv  trades.json
dreambot/config/: broker.yaml  data.yaml  features.yaml  risk.yaml  symbols.yaml
dreambot/ops/: healthcheck.sh  install_nightly.sh  nightly_calibration.py  progress.md  quickstart.md  runbook.md
dreambot/services/backtest/: calibrate.py  data_loader.py  duck_io.py  fill_model.py  main.py  metrics.py  polygon_rest_sync.py  polygon_sync.py  replay.py
dreambot/services/common/: __init__.py  audit.py  redis.py  streams.py
dreambot/services/dashboard/: app.py  charts.py  heatmap.py  metrics.py
dreambot/services/execution/: main.py  schemas.py
dreambot/services/features/: indicators.py  main.py  microstructure.py  probability.py  schemas.py  vol_surface.py
dreambot/services/ingest/: chain_snapshot.py  main.py  polygon_ws.py  recording.py  schemas.py
dreambot/services/learner/: bandit.py  calibration_io.py  changepoint.py  main.py  metalabel.py  (+1 more)
dreambot/tests/: test_audit.py  test_backtest.py  test_backtest_loader.py  test_calibrate.py  test_calibration.py  test_dashboard_metrics.py  test_econ_halt.py  test_features.py  test_gating.py  test_ingest_metrics.py  test_oms.py  test_option_universe.py  test_playbook.py  test_polygon_rest_sync.py  test_polygon_sync.py  test_portfolio.py  test_risk_commands.py  test_signal_calibration.py  test_stream_pipeline.py  test_universe.py
(+189 files in other folders)
